--- a/roger-skyline1/deployment-files/web/assets/css/style.css
+++ b/roger-skyline1/deployment-files/web/assets/css/style.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: Gothic;
+    src: local("Gothic"),
+    local("Gothic"),
+    url("../fonts/GOTHIC.TTF");
+}
+
 html, body {
     height: 100%;
     background: #333;
@@ -5,7 +12,7 @@ html, body {
 
 body {
     display: flex;
-    font-family: 'Century Gothic', Verdana, Calibri, serif;
+    font-family: Gothic, 'Century Gothic', Verdana, Calibri, serif;
     font-size: 15px;
     margin: 0;
     text-align: center;
@@ -21,7 +28,7 @@ body {
     width: 100%;
     height: 100%;
     flex-direction: column !important;
-    max-width: 25%;
+    max-width: 30rem;
 }
 
 header {
@@ -39,7 +46,6 @@ header .logo {
 }
 
 nav {
-    font-family: 'Century Gothic', 'Source code pro', Verdana, serif, Roboto;
     width: 100%;
 }
 
@@ -124,7 +130,7 @@ h2 {
 
 .btn {
     cursor: pointer;
-    font-size: 1.25rem;
+    font-size: inherit;
     display: inline-block;
     white-space: nowrap;
     vertical-align: middle;
@@ -159,19 +165,20 @@ h2 {
     transform: translateY(.05rem);
 }
 
-.btn-login {
+form .btn-login {
     background-color: transparent;
-    border: 0.2rem solid transparent;
+    border: 0rem solid transparent;
+    border-bottom: .2rem solid transparent;
 }
 
-.btn-login:not(.disabled):hover {
+form .btn-login:not(.disabled):hover {
     border-bottom: 0.2rem solid rgba(95, 172, 255, .25);
     background-color: rgba(95, 172, 255, 0.25);
 }
 
 input {
     text-align: center;
-    font-size: 1.25rem;
+    font-size: inherit;
     padding: .5rem 0;
     margin-bottom: 10px;
     width: 100%;
@@ -185,4 +192,78 @@ input {
 
 input:focus {
     border: 1px solid rgba(255, 255, 255, .9);
+}
+
+@media only screen and (max-width:400px) {
+    header .logo {
+        position: absolute;
+        left: 0.75rem;
+        margin-top: 0.75rem;
+        margin-bottom: 0;
+        width: 3rem;
+        height: 3rem;
+    }
+
+    nav a {
+        padding: .95rem .60rem;
+    }
+
+    body {
+        font-size: 12px;
+    }
+
+    h1 {
+        font-size: 2.5rem;
+    }
+
+    h2 {
+        font-size: 2rem;
+    }
+
+    .btn {
+        padding: 0.75rem 1rem;
+    }
+
+    .btn-large {
+        width: 100%;
+        padding: 0.75rem 0;
+    }
+
+}
+
+@media only screen and (max-width:300px) {
+    header .logo {
+        position: absolute;
+        left: 0.50rem;
+        margin-top: 0.50rem;
+        margin-bottom: 0;
+        width: 2.5rem;
+        height: 2.5rem;
+    }
+
+    nav a {
+        padding: .5rem .25rem;
+    }
+
+    body {
+        font-size: 10px;
+    }
+
+    h1 {
+        font-size: 2rem;
+    }
+
+    h2 {
+        font-size: 1.5rem;
+    }
+
+    .btn {
+        padding: 0.50rem 0.75rem;
+    }
+
+    .btn-large {
+        width: 100%;
+        padding: 0.5rem 0;
+    }
+
 }
