--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -4,7 +4,11 @@ html, body {
     padding: 0;
 }
 
-
 .header {
     display: flex;
+    width: 75%;
+}
+
+.header .flex-compononent {
+    flex: 1;
 }
