--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -9,8 +9,9 @@ html, body {
     margin-right: auto;
     display: flex;
     width: 75%;
+    justify-content: space-between;
 }
 
 .header .flex-compononent {
-    flex: 1;
+    flex-basis: 30%;
 }
