2 files changed, 16 insertions(+), 8 deletions(-)

--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -12,6 +12,14 @@ html, body {
     justify-content: space-between;
 }
 
-.header .flex-compononent {
+.header .flex-compononent:nth-child(1) {
+    flex-basis: 10%;
+}
+
+.header .flex-compononent:nth-child(3) {
+    flex-basis: 50%;
+}
+
+.header .flex-compononent:nth-child(3) {
     flex-basis: 30%;
 }
