2 files changed, 13 insertions(+), 7 deletions(-)

--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -12,6 +12,10 @@ html, body {
     justify-content: space-between;
 }
 
+.header .searchbar {
+    width: 100%;
+}
+
 .header .flex-compononent:nth-child(1) {
     flex-basis: 10%;
 }
