--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -97,6 +97,13 @@ html, body {
     margin-left: auto;
     margin-right: auto;
     width: 40%;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.header .flex-compononent:nth-child(3) a {
+    width: 100%;
+    text-decoration: none;
 }
 
 .header .flex-compononent:nth-child(3) img {
