--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -96,9 +96,7 @@ html, body {
 .header .flex-compononent:nth-child(3) .icon {
     margin-left: auto;
     margin-right: auto;
-    width: 40%;
-    top: 50%;
-    transform: translateY(-50%);
+    width: 100%;
 }
 
 .header .flex-compononent:nth-child(3) a {
@@ -107,14 +105,14 @@ html, body {
 }
 
 .header .flex-compononent:nth-child(3) img {
-    width: 100%;
+    width: 40%;
 }
 
 .header .flex-compononent:nth-child(3) .icons {
     position: relative;
     display: flex;
     width: 100%;
-    justify-content: flex-end;
+    justify-content: center;
     top: 50%;
     transform: translateY(-50%);
 }
