2 files changed, 7 insertions(+), 7 deletions(-)

--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -112,7 +112,7 @@ html, body {
     position: relative;
     display: flex;
     width: 100%;
-    justify-content: center;
+    justify-content: flex-end;
     top: 50%;
     transform: translateY(-50%);
 }
