--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -102,7 +102,8 @@ html, body {
 .header .flex-compononent:nth-child(3) a {
     width: 50%;
     text-decoration: none;
-    color: #fff;
+    font-size: 20px;
+    color: #000;
 }
 
 .header .flex-compononent:nth-child(3) .icons {
