--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -104,6 +104,7 @@ html, body {
     text-decoration: none;
     font-size: 50px;
     color: #000;
+    text-align: center;
 }
 
 .header .flex-compononent:nth-child(3) .icons {
