--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -84,8 +84,9 @@ html, body {
     display: none;
 }
 
-.header .flex-compononent:nth-child(2) .searchbar .search svg {
-    width: 100%;
+.header .flex-compononent:nth-child(2) .searchbar .search i {
+    font-size: 20px;
+    color: #fff;
 }
 
 .header .flex-compononent:nth-child(3) .flex-icon {
