--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -71,6 +71,7 @@ html, body {
     position: relative;
     top: 50%;
     transform: translateY(-50%);
+    width: 50%;
     margin-left: auto;
     margin-right: auto;
 }
