2 files changed, 12 insertions(+), 8 deletions(-)

--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -116,8 +116,12 @@ html, body {
 
 .header .flex-compononent:nth-child(3) p {
     position: absolute;
-    left: 15rem;
-    color: red;
+    color: #fff;
+    float: left;
+    margin: 0;
+    font-size: 20px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .header .flex-compononent:nth-child(1) {
