--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -114,7 +114,7 @@ html, body {
     transform: translateY(-50%);
 }
 
-.header .flex-compononent:nth-child(3) p {
+.header .flex-compononent:nth-child(3) .items-count {
     position: absolute;
     color: #fff;
     float: left;
@@ -122,6 +122,11 @@ html, body {
     font-size: 20px;
     top: 50%;
     transform: translateY(-50%);
+}
+
+.header .flex-compononent:nth-child(3) .items-count p {
+    color: #fff;
+    font-size: 20px;
 }
 
 .header .flex-compononent:nth-child(1) {
