--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -122,6 +122,7 @@ html, body {
     font-size: 20px;
     top: 50%;
     transform: translateY(-50%);
+    width: 4.2rem;
 }
 
 .header .flex-compononent:nth-child(3) .items-count p {
