2 files changed, 8 insertions(+), 7 deletions(-)

--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -116,7 +116,7 @@ html, body {
 
 .header .flex-compononent:nth-child(3) .items-count {
     position: absolute;
-    color: #fff;
+    color: rgb(250, 120, 0);
     float: left;
     margin: 0;
     font-size: 20px;
