--- a/piscines/php/rle-ru/rush00/assets/css/install.css
+++ b/piscines/php/rle-ru/rush00/assets/css/install.css
@@ -1,5 +1,5 @@
 .install-row {
-    width: 50vw;
+    width: 25vw;
     float: none;
     margin-left: auto;
     margin-right: auto;
@@ -10,7 +10,7 @@
     box-sizing: border-box;
 }
 
-.install {
+.install-content {
     padding: 15px 30px;
     text-align: center;
     margin-bottom: 30px;
@@ -19,4 +19,21 @@
     border: none;
     transition: 0.15s ease-in-out;
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);
+}
+
+.install {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    height: 100%;
+    flex-direction: column !important;
+    max-width: 30rem;
+}
+
+
+@media only screen and (max-width:900px) {
+    .install-row {
+        width: 50vw;
+    }
 }
