--- a/piscines/php/rle-ru/rush00/assets/css/install.css
+++ b/piscines/php/rle-ru/rush00/assets/css/install.css
@@ -14,7 +14,7 @@
     padding: 15px 30px;
     text-align: center;
     margin-bottom: 30px;
-    background-color: #3b3b3b;
+    background-color: rgb(250, 250, 250);
     border-radius: 4px;
     border: none;
     transition: 0.15s ease-in-out;
