--- a/piscines/php/rle-ru/rush00/assets/css/install.css
+++ b/piscines/php/rle-ru/rush00/assets/css/install.css
@@ -14,7 +14,7 @@
     padding: 15px 30px;
     text-align: center;
     margin-bottom: 30px;
-    background-color: rgb(235, 235, 235);
+    background-color: #4b4b4b;
     border-radius: 4px;
     border: none;
     transition: 0.15s ease-in-out;
