--- a/piscines/php/rle-ru/rush00/assets/css/install.css
+++ b/piscines/php/rle-ru/rush00/assets/css/install.css
@@ -8,7 +8,7 @@
     padding-right: 15px;
     padding-left: 15px;
     box-sizing: border-box;
-    height: 100%;
+    height: 80vh;
 }
 
 .install-content {
