--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -19,6 +19,11 @@ body {
     flex-direction: column !important;
 }
 
+.inner {
+    display: block;
+    padding: 0;
+}
+
 .header {
     display: flex;
     justify-content: space-between;
