2 files changed, 33 insertions(+), 40 deletions(-)

--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -28,6 +28,8 @@ body {
     display: flex;
     justify-content: space-between;
     width: 100%;
+    margin-bottom: auto !important;
+
 }
 
 .header .flex-compononent {
