--- a/piscines/php/rle-ru/rush00/assets/css/install.css
+++ b/piscines/php/rle-ru/rush00/assets/css/install.css
@@ -17,7 +17,7 @@ body {
 .install-content {
     padding: 15px 30px;
     text-align: center;
-    background-color: #6b6b6b;
+    background-color: #ababab;
     border-radius: 4px;
     border: none;
     transition: 0.15s ease-in-out;
