--- a/piscines/php/rle-ru/rush00/assets/css/install.css
+++ b/piscines/php/rle-ru/rush00/assets/css/install.css
@@ -18,7 +18,7 @@ body {
 .install-content {
     padding: 15px 30px;
     text-align: center;
-    background-color: #ababab;
+    background-color: #3b3b3b;
     border-radius: 4px;
     border: none;
     transition: 0.15s ease-in-out;
