2 files changed, 43 insertions(+), 59 deletions(-)

--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -173,6 +173,16 @@ body {
     transition-delay:  0.05s;
 }
 
+.flex-categories {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    top: 50%;
+    transform: translateY(-50%);
+    align-items: center;
+    flex-direction: column;
+}
+
 .flex-items {
     max-width: 90vw;
     margin: 40px auto 0 auto;
