--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -181,6 +181,7 @@ body {
     transform: translateY(-50%);
     align-items: center;
     flex-direction: column;
+    box-sizing: border-box;
 }
 
 .flex-items {
