2 files changed, 11 insertions(+), 7 deletions(-)

--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -181,7 +181,11 @@ body {
     transform: translateY(-50%);
     align-items: center;
     flex-direction: column;
+}
+
+.flex-categories .category {
     box-sizing: border-box;
+    flex-basis: 25%;
 }
 
 .flex-items {
