--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -176,15 +176,15 @@ body {
 .flex-categories {
     display: flex;
     width: 100%;
-    justify-content: space-between;
+    justify-content: space-around;
     top: 50%;
     transform: translateY(-50%);
     align-items: center;
-    flex-direction: column;
 }
 
 .flex-categories .category {
     box-sizing: border-box;
+    padding: 0 1rem;
     flex-basis: 25%;
 }
 
