--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -175,7 +175,8 @@ body {
 
 .flex-categories {
     display: flex;
-    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
     justify-content: space-around;
     top: 50%;
     transform: translateY(-50%);
