--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -184,12 +184,12 @@ select {
     cursor: pointer;
     background-color: transparent;
     width: 100%;
-    padding: .5rem 0;
+    padding: .25rem 0;
     display: inline-block;
     box-sizing: border-box;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     margin-top: 5px;
-    border: 1px solid #2b2b2b;
+    border: 0.25px solid rgba(43, 43, 43, .5);
     border-radius: .25rem;
     color: inherit;
     text-align: center;
