6 files changed, 118 insertions(+), 110 deletions(-)

--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -230,14 +230,8 @@ body {
     text-transform: uppercase;
 }
 
-.flex-items .description .price {
+.flex-items .description .price, .flex-items .description .campus {
     margin-left: 1rem;
-    float: left;
-}
-
-.flex-items .description .quantity {
-    margin-left: 1rem;
-    float: left;
 }
 
 .flex-items .description .id {
