11 files changed, 187 insertions(+), 111 deletions(-)

--- a/piscines/php/rle-ru/rush00/assets/css/style.css
+++ b/piscines/php/rle-ru/rush00/assets/css/style.css
@@ -230,7 +230,7 @@ body {
     text-transform: uppercase;
 }
 
-.flex-items .description .price, .flex-items .description .campus {
+.flex-items .description .price, .flex-items .description .campus, .flex-items .description .quantity {
     margin-left: 1rem;
 }
 
