--- a/piscines/php/rle-ru/rush00/assets/css/login.css
+++ b/piscines/php/rle-ru/rush00/assets/css/login.css
@@ -15,7 +15,7 @@ body {
     color: #fff;
 }
 
-..login-content {
+.login-content {
     padding: 15px 30px;
     text-align: center;
     background-color: #3b3b3b;
