2 files changed, 20 insertions(+), 6 deletions(-)

--- a/piscines/php/rle-ru/rush00/assets/css/login.css
+++ b/piscines/php/rle-ru/rush00/assets/css/login.css
@@ -35,6 +35,19 @@ body {
     max-width: 30rem;
 }
 
+.log-top {
+    width: 25vw;
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
+    transition: 0.2s ease;
+    transition-delay: 0.05s;
+    padding-right: 15px;
+    padding-left: 15px;
+    box-sizing: border-box;
+    color: #fff;
+}
+
 input {
     text-align: center;
     font-size: inherit;
