--- a/piscines/php/rle-ru/rush00/assets/css/login.css
+++ b/piscines/php/rle-ru/rush00/assets/css/login.css
@@ -48,6 +48,17 @@ body {
     color: #fff;
 }
 
+
+.log-top-content {
+    padding: 15px 30px;
+    text-align: center;
+    background-color: #3b3b3b;
+    border-radius: 4px;
+    border: none;
+    transition: 0.15s ease-in-out;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);
+}
+
 input {
     text-align: center;
     font-size: inherit;
