--- a/piscines/php/rle-ru/rush00/assets/css/login.css
+++ b/piscines/php/rle-ru/rush00/assets/css/login.css
@@ -2,7 +2,7 @@ body {
     height: 100%;
 }
 
-.login-row {
+.login-row, .log-top-row {
     width: 25vw;
     float: none;
     margin-left: auto;
@@ -15,7 +15,7 @@ body {
     color: #fff;
 }
 
-.login-content {
+.login-content .log-top-content{
     padding: 15px 30px;
     text-align: center;
     background-color: #3b3b3b;
@@ -36,27 +36,16 @@ body {
 }
 
 .log-top {
-    width: 25vw;
-    float: none;
-    margin-left: auto;
-    margin-right: auto;
-    transition: 0.2s ease;
-    transition-delay: 0.05s;
-    padding-right: 15px;
-    padding-left: 15px;
-    box-sizing: border-box;
-    color: #fff;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-direction: column !important;
 }
 
-
-.log-top-content {
-    padding: 15px 30px;
-    text-align: center;
-    background-color: #3b3b3b;
-    border-radius: 4px;
-    border: none;
-    transition: 0.15s ease-in-out;
-    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);
+.log-top a {
+    text-decoration: none;
+    color: #fff;
+    flex-basis: 50%;
 }
 
 input {
