--- a/piscines/php/rle-ru/rush00/assets/css/login.css
+++ b/piscines/php/rle-ru/rush00/assets/css/login.css
@@ -48,6 +48,14 @@ body {
     padding: 15px 30px;
 }
 
+.log-top a.active {
+    background-color: #2b2b2b;
+}
+
+.log-top a:hover {
+    background-color: rgba(255, 255, 255, .25);
+}
+
 .log-top-content {
     padding: 0 !important;
 }
