--- a/piscines/php/rle-ru/rush00/assets/css/login.css
+++ b/piscines/php/rle-ru/rush00/assets/css/login.css
@@ -54,8 +54,12 @@ body {
     background-color: #3b3b3b;
 }
 
-.log-top a:hover(:not .active) {
-    background-color: rgba(255, 255, 255, .15);
+.log-top a.active:hover {
+    background-color: transparent !important;
+}
+
+.log-top a:hover {
+    background-color: rgba(255, 255, 255, .1);
 }
 
 .log-top-content {
