2 files changed, 13 insertions(+), 13 deletions(-)

--- a/piscines/php/day08/ex00/assets/css/newgame.css
+++ b/piscines/php/day08/ex00/assets/css/newgame.css
@@ -5,5 +5,5 @@ html, body {
 }
 
 .background {
-    background-image: url(../assets/images/background/space.png);
+    background-image: url(assets/images/background/space.png);
 }
