--- a/piscines/php/day08/ex00/assets/css/newgame.css
+++ b/piscines/php/day08/ex00/assets/css/newgame.css
@@ -2,8 +2,12 @@ html, body {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    margin: 0;
+    padding: 0;
 }
 
 .background {
     background-image: url(../images/background/space.png);
+    width: 100%;
+    height: 100%;
 }
