2 files changed, 22 insertions(+), 20 deletions(-)

--- a/piscines/php/day08/ex00/assets/css/newgame.css
+++ b/piscines/php/day08/ex00/assets/css/newgame.css
@@ -7,6 +7,8 @@ html, body {
 }
 
 .background {
+    -ms-filter: blur(100%);
+    filter: blur(100%);
     background-image: url(../images/background/space.png);
     width: 100%;
     height: 100%;
