--- a/piscines/php/day08/ex00/assets/css/newgame.css
+++ b/piscines/php/day08/ex00/assets/css/newgame.css
@@ -8,8 +8,10 @@ html, body {
 
 .background {
     background-image: url(../images/background/space.png);
-    -ms-filter: blur(100%);
-    filter: blur(100%);
+    background-size: cover;
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+    transform: scale(1.025);
     width: 100%;
     height: 100%;
 }
