--- a/piscines/php/day08/ex00/assets/css/newgame.css
+++ b/piscines/php/day08/ex00/assets/css/newgame.css
@@ -6,12 +6,16 @@ html, body {
     padding: 0;
 }
 
+
 .background {
+    width: 100%;
+    height: 100%;
     background-image: url(../images/background/space.png);
     background-size: cover;
     -ms-filter: blur(5px);
     filter: blur(5px);
     transform: scale(1.025);
-    width: 100%;
-    height: 100%;
+    position: absolute;
+    z-index: -99;
 }
+
