--- a/piscines/php/day08/ex00/assets/css/main.css
+++ b/piscines/php/day08/ex00/assets/css/main.css
@@ -19,3 +19,116 @@ html, body {
     z-index: -99;
 }
 
+.new-game-row, .top-nav-row {
+    width: 25vw;
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
+    transition: 0.2s ease;
+    transition-delay: 0.05s;
+    padding-right: 15px;
+    padding-left: 15px;
+    box-sizing: border-box;
+    color: #fff;
+}
+
+.new-game-content, .log-top-content{
+    padding: 15px 30px;
+    text-align: center;
+    background-color: #3b3b3b;
+    transition: 0.15s ease-in-out;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);
+}
+
+.new-game {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    height: 100%;
+    flex-direction: column !important;
+    max-width: 30rem;
+}
+
+.top-nav {
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+.top-nav a {
+    text-decoration: none;
+    color: #fff;
+    flex-basis: 50%;
+    padding: 15px 30px;
+}
+
+.top-nav a {
+    background-color: #2b2b2b;
+}
+
+.top-nav a.active {
+    background-color: #3b3b3b;
+}
+
+.top-nav a.active:hover {
+    background-color: transparent !important;
+}
+
+.top-nav a:hover {
+    background-color: rgba(255, 255, 255, .1);
+}
+
+.top-nav-content {
+    padding: 0 !important;
+}
+
+input {
+    text-align: center;
+    font-size: inherit;
+    padding: .5rem 0;
+    margin-bottom: 10px;
+    width: 100%;
+    color: inherit;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    box-sizing: border-box;
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, .4);
+    border-radius: .25rem;
+}
+
+.btn {
+    padding: 1rem 1rem;
+    cursor: pointer;
+    font-size: inherit;
+    text-align: center;
+    color: inherit;
+    border-radius: 5px;
+    background-color: transparent;
+    border: 0rem solid transparent;
+    border-bottom: .2rem solid transparent;
+    margin-left: auto;
+    margin-right: auto;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.btn-blue:not(.disabled):hover {
+    border-bottom: 0.2rem solid rgba(95, 172, 255, .25);
+    background-color: rgba(95, 172, 255, 0.25);
+}
+
+.btn-white:not(.disabled):hover {
+    border-bottom: 0.2rem solid rgba(255, 255, 255, .25);
+    background-color: rgba(255, 255, 255, 0.25);
+}
+
+.btn-green:not(.disabled):hover {
+    border-bottom: 0.2rem solid rgba(76, 172, 80, .25);
+    background-color: rgba(76, 172, 80, 0.25);
+}
+
+@media only screen and (max-width:900px) {
+    .new-game-row {
+        width: 50vw;
+    }
+}
