3 files changed, 37 insertions(+), 27 deletions(-)

--- a/piscines/php/day08/ex00/assets/css/main.css
+++ b/piscines/php/day08/ex00/assets/css/main.css
@@ -19,6 +19,14 @@ html, body {
     z-index: -99;
 }
 
+.main {
+    display: flex;
+}
+
+.container {
+    margin: auto;
+}
+
 .new-game-row, .top-nav-row {
     width: 25vw;
     float: none;
