--- a/piscines/php/day08/ex00/assets/css/main.css
+++ b/piscines/php/day08/ex00/assets/css/main.css
@@ -84,7 +84,11 @@ main {
 }
 
 .top-nav a:hover {
-    background-color: rgba(255, 255, 255, .5);
+    background-color: rgba(40, 40, 40, .5);
+}
+
+.top-nav a.active:hover {
+    background-color: rgba(55, 55, 55, .5);
 }
 
 .top-nav-content {
