2 files changed, 8 insertions(+), 8 deletions(-)

--- a/piscines/php/day08/ex00/assets/css/main.css
+++ b/piscines/php/day08/ex00/assets/css/main.css
@@ -84,11 +84,11 @@ main {
 }
 
 .top-nav a:hover {
-    background-color: rgba(40, 40, 40, .5);
+    background-color: rgba(40, 40, 40);
 }
 
 .top-nav a.active:hover {
-    background-color: rgba(55, 55, 55, .5);
+    background-color: rgba(55, 55, 55);
 }
 
 .top-nav-content {
