2 files changed, 14 insertions(+), 10 deletions(-)

--- a/piscines/php/day08/ex00/assets/css/main.css
+++ b/piscines/php/day08/ex00/assets/css/main.css
@@ -28,6 +28,10 @@ main {
 
 .container {
     margin: auto;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    border: 0 solid transparent;
 }
 
 .new-game-row, .top-nav-row {
