3 files changed, 16 insertions(+), 13 deletions(-)

--- a/piscines/php/day08/ex00/assets/css/main.css
+++ b/piscines/php/day08/ex00/assets/css/main.css
@@ -148,7 +148,12 @@ input {
 }
 
 .scores .score p {
+    text-align: left;
     float: left;
+}
+
+.scores .score .player-score {
+    text-align: right !important;
 }
 
 .visible {
