--- a/piscines/php/day08/ex00/assets/css/main.css
+++ b/piscines/php/day08/ex00/assets/css/main.css
@@ -4,8 +4,8 @@ html, body {
     overflow: hidden;
     margin: 0;
     padding: 0;
+    font-family: 'Century Gothic', Verdana, Calibri, serif;
 }
-
 
 .background {
     width: 100%;
