--- a/piscines/php/day08/ex00/assets/css/main.css
+++ b/piscines/php/day08/ex00/assets/css/main.css
@@ -1,24 +1,3 @@
-html, body {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
-    font-family: 'Century Gothic', Verdana, Calibri, serif;
-}
-
-.background {
-    width: 100%;
-    height: 100%;
-    background-image: url(../images/background/space.png);
-    background-size: cover;
-    -ms-filter: blur(5px);
-    filter: blur(5px);
-    transform: scale(1.025);
-    position: absolute;
-    z-index: -99;
-}
-
 main {
     position: absolute;
     width: 100%;
@@ -30,13 +9,13 @@ main {
     margin: auto;
 }
 
-.top-nav {
+.nav {
     display: flex;
     width: 100%;
     height: 100%;
 }
 
-.top-nav a {
+.nav a {
     text-decoration: none;
     color: #fff;
     flex-basis: 50%;
@@ -44,20 +23,30 @@ main {
     text-align: center;
 }
 
-.top-nav a {
+.nav a.left {
+    border-radius: 4px 0 0 0;
+    border: none;
+}
+
+.nav a.right {
+    border-radius: 0 4px 0 0;
+    border: none;
+}
+
+.nav a {
     background-color: #2b2b2b;
 }
 
-.top-nav a.active {
+.nav a.active {
     background-color: #3b3b3b;
 }
 
-.top-nav a:not(.active):hover {
-    background-color: rgba(55, 55, 55);
+.nav a:not(.active):hover {
+    background-color: rgb(55, 55, 55);
     cursor: pointer;
 }
 
-.top-nav-content {
+.nav-content {
     padding: 0 !important;
 }
 
@@ -68,11 +57,15 @@ input {
     margin-bottom: 10px;
     width: 100%;
     color: inherit;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
     box-sizing: border-box;
     background-color: transparent;
     border: 1px solid rgba(255, 255, 255, .4);
     border-radius: .25rem;
+}
+
+input:focus {
+    border: 1px solid rgba(255, 255, 255, .9);
 }
 
 .btn {
@@ -105,8 +98,7 @@ input {
     background-color: rgba(76, 172, 80, 0.25);
 }
 
-
-.new-game-row, .top-nav-row, .scores-row {
+.main-row {
     display: block;
     width: 25rem;
     float: none;
@@ -114,18 +106,18 @@ input {
     margin-right: auto;
     transition: 0.2s ease;
     transition-delay: 0.05s;
-    padding-right: 15px;
-    padding-left: 15px;
     box-sizing: border-box;
     color: #fff;
+    border-radius: 4px;
+    border: none;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);
+    background-color: #3b3b3b;
 }
 
-.new-game-content, .top-nav-content, .scores-content {
+.new-game-content, .nav-content, .scores-content {
     padding: 15px 30px;
     text-align: center;
-    background-color: #3b3b3b;
     transition: 0.15s ease-in-out;
-    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);
 }
 
 .new-game, .scores {
