2 files changed, 85 insertions(+), 177 deletions(-)

--- a/piscines/php/day08/ex00/assets/css/game.css
+++ b/piscines/php/day08/ex00/assets/css/game.css
@@ -25,13 +25,13 @@
 
 .movements {
     display: flex;
+    flex-direction: column;
+    margin: auto;
+    align-items: center;
+    flex: 1;
 }
 
 .move-point {
     color: lawngreen;
     font-size: 1.5rem;
-}
-
-.move-up {
-
 }
