2 files changed, 20 insertions(+), 16 deletions(-)

--- a/piscines/php/day08/ex00/assets/css/game.css
+++ b/piscines/php/day08/ex00/assets/css/game.css
@@ -35,6 +35,10 @@
     font-size: 3rem;
 }
 
+.movements i:hover {
+    cursor: pointer;
+}
+
 .move-point {
     color: lawngreen;
     font-size: 1.5rem;
