3 files changed, 83 insertions(+), 14 deletions(-)

--- a/piscines/php/day08/ex00/assets/css/game.css
+++ b/piscines/php/day08/ex00/assets/css/game.css
@@ -63,3 +63,15 @@ table td {
     width: 20px;
     height: 20px;
 }
+
+.blue {
+    color: dodgerblue;
+}
+
+.red {
+    color: red;
+}
+
+.asteroid {
+    color: rgb(255, 100, 0);
+}
