3 files changed, 22 insertions(+), 22 deletions(-)

--- a/piscines/php/day08/ex00/assets/css/game.css
+++ b/piscines/php/day08/ex00/assets/css/game.css
@@ -65,13 +65,13 @@ table td {
 }
 
 .blue {
-    color: dodgerblue;
+    background-color: dodgerblue;
 }
 
 .red {
-    color: red;
+    background-color: red;
 }
 
 .asteroid {
-    color: rgb(255, 100, 0);
+    background-color: rgb(255, 100, 0);
 }
