--- a/camagru/assets/css/general.css
+++ b/camagru/assets/css/general.css
@@ -249,17 +249,17 @@ footer .links {
 
 #snackbar {
     visibility: hidden;
-    min-width: 250px;
-    margin-left: -125px;
-    background-color: #2b2b2b;
-    color: #fff;
-    text-align: center;
-    border-radius: 2px;
-    padding: 16px;
-    position: fixed;
-    z-index: 1;
-    left: 50%;
+    display: flex;
+    width: 100%;
     bottom: 30px;
+}
+
+.snackbar {
+    min-width: 15rem;
+    text-align: center;
+    color: #fff;
+    background-color: #2b2b2b;
+    margin: 0 auto;
 }
 
 #snackbar.show {
