2 files changed, 7 insertions(+), 6 deletions(-)

--- a/camagru/assets/css/general.css
+++ b/camagru/assets/css/general.css
@@ -261,6 +261,7 @@ footer .links {
     color: #fff;
     background-color: #2b2b2b;
     margin: 0 auto;
+    padding: 16px;
 }
 
 #snackbar.show {
