62 files changed, 4238 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -192,6 +192,12 @@ header {
     }
 }
 
+/** User sub nav */
+
+.user-icon .user-nav li {
+    list-style-type: none;
+}
+
 /** Footer */
 
 footer {
