62 files changed, 4256 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -194,6 +194,13 @@ header {
 
 /** User sub nav */
 
+.user-icon .user-nav {
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    padding: 0;
+}
+
 .user-icon .user-nav li {
     list-style-type: none;
 }
