62 files changed, 4275 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -159,6 +159,7 @@ header {
 .flex-component:nth-child(3) .icon {
     margin: auto 0;
     width: 100%;
+    position: relative;
 }
 
 .flex-component:nth-child(3) a {
