--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -195,7 +195,7 @@ header {
 
 /** User sub nav */
 
-.user-icon .user-nav {
+.user-nav {
     display: inline-block;
     position: absolute;
     left: 0;
@@ -203,7 +203,7 @@ header {
     background-color: #2b2b2b;
 }
 
-.user-icon .user-nav li {
+.user-nav li {
     list-style-type: none;
 }
 
