--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -196,9 +196,10 @@ header {
 /** User sub nav */
 
 .user-nav {
+    z-index: 2;
     display: inline-block;
     position: absolute;
-    left: 0;
+    right: 0;
     padding: 0;
     background-color: #2b2b2b;
 }
