--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -202,7 +202,8 @@ header {
     right: 0;
     top: 47px;
     height: 100%;
-    background-color: #2b2b2b;
+    background-color: #fff;
+    border-left: 1px solid rgba(0,0,0,.0975);
     width: 15rem;
 }
 
