--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -54,12 +54,13 @@ body {
 .aside-bar .head {
     display: flex;
     width: 100%;
+    height: 5rem;
 }
 
 .aside-bar .head .title {
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
+
 }
 
 .aside-bar li {
