--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -54,7 +54,9 @@ body {
 .aside-bar .head {
     display: flex;
     width: 100%;
-    height: 5rem;
+    height: 4rem;
+    -webkit-box-shadow: 0 0.1rem 0.2rem 0 rgba(123, 104, 104, 0.2);
+    box-shadow: 0 0.1rem 0.2rem 0 rgba(123, 104, 104, 0.2);
 }
 
 .aside-bar .head .title {
