--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -33,7 +33,7 @@ body {
     right: 0;
     top: 0;
     background: rgba(33, 47, 62, 0.7);
-    cursor: e-resize;
+    cursor: url("Salut bo gosse") default;
     display: block;
     z-index: 2;
 }
@@ -54,7 +54,7 @@ body {
 .aside-bar .head {
     display: flex;
     width: 100%;
-    height: 4rem;
+    height: 3.5rem;
     -webkit-box-shadow: 0 0.1rem 0.2rem 0 rgba(123, 104, 104, 0.2);
     box-shadow: 0 0.1rem 0.2rem 0 rgba(123, 104, 104, 0.2);
 }
