62 files changed, 4316 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -69,11 +69,11 @@ body {
     list-style-type: none;
 }
 
-.aside-bar.active > .overlay {
+.aside-bar[active] > .overlay {
     visibility: visible;
 }
 
-.aside-bar.active > .container {
+.aside-bar[active] > .container {
     overflow-y: hidden;
 }
 
