--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -49,6 +49,7 @@ body {
     background-color: #fff;
     border-left: 1px solid rgba(0,0,0,.0975);
     width: 25rem;
+    visibility: hidden;
 }
 
 .aside-bar .head {
