62 files changed, 4317 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -70,7 +70,7 @@ body {
     list-style-type: none;
 }
 
-body[has_aside] .overlay {
+body[has_aside] .overlay, body[has_aside] .aside-bar {
     visibility: visible;
 }
 
